Overlapping Menu Tags Issue Solved

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -250,5 +250,6 @@ a, button {
 }
 
 .banner-section-full {
-  height: 100%;
+  //height: 100%;
+  height: 800px;
 }
